--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -17,6 +17,12 @@
       media="screen"
       href="../css/omini.css"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      media="screen"
+      href="../css/queries.css"
+    />
     <script src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js"></script>
     <script
       type="module"
