--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -48,6 +48,10 @@
           <li><a href="#" class="main-nav-link nav-cta">Try for free</a></li>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon class="icon-mobile-nav" name="menu"></ion-icon>
+        <ion-icon class="icon-mobile-nav" name="close"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
