--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -32,6 +32,7 @@
       nomodule=""
       src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="../js/script.js" defer></script>
   </head>
   <body>
     <header class="header">
@@ -575,7 +576,8 @@
             </li>
           </ul>
           <p class="copyright">
-            Copyright &copy; 2028 by Omnifood,Inc. All right Received
+            Copyright &copy; <span class="year">2027</span> by Omnifood,Inc. All
+            right Received
           </p>
         </div>
         <div class="address-col">
