--- a/Components/mynotebook/mynotebook.html
+++ b/Components/mynotebook/mynotebook.html
@@ -19,7 +19,7 @@
     />
   </head>
   <body>
-    <div class="home-container">
+    <div class="home-container grid grid--row-3">
       <h1 class="header-my">MY</h1>
       <h1 class="header-notebook">NOTEBOOK</h1>
       <nav class="notebook-links">
