--- a/Components/ominifood-desktop/css/queries.css
+++ b/Components/ominifood-desktop/css/queries.css
@@ -87,6 +87,7 @@
   }
   .btn-mobile-nav {
     display: block;
+    z-index: 9999;
   }
   .main-nav {
     background-color: rgba(255, 255, 255, 0.97);
