--- a/Components/ominifood-desktop/src/index.html
+++ b/Components/ominifood-desktop/src/index.html
@@ -35,7 +35,7 @@
     <script src="../js/script.js" defer></script>
   </head>
   <body>
-    <header class="header">
+    <header class="header sticky">
       <a href="#">
         <img src="../img/omnifood-logo.png" alt="" class="logo" />
       </a>
@@ -66,7 +66,7 @@
               eat healthy again. Tailored to your personal tastes and
               nutritional needs.
             </p>
-            <a href="#" class="btn btn--full margin-right-sm"
+            <a href="#cta" class="btn btn--full margin-right-sm"
               >Start eating well</a
             >
             <a href="#" class="btn btn--outline">Learn more &rarr;</a>
@@ -507,7 +507,7 @@
           </div>
         </div>
       </section>
-      <section class="section-cta">
+      <section class="section-cta" id="cta">
         <div class="container">
           <div class="cta">
             <div class="cta-text-box">
