--- a/Components/mynotebook/mynotebook.html
+++ b/Components/mynotebook/mynotebook.html
@@ -19,8 +19,8 @@
     />
   </head>
   <body>
-    <div class="home-container grid grid--row-3">
-      <h1 class="header-my">MY</h1>
+    <section class="container grid grid--row-3 home">
+      <h2 class="header-my">MY</h2>
       <h1 class="header-notebook">NOTEBOOK</h1>
       <nav class="notebook-links">
         <a href="mynotes.html">My Profile</a>
@@ -28,6 +28,6 @@
         <a href="#">Create Notes</a>
         <a href="#">Share Notes</a>
       </nav>
-    </div>
+    </section>
   </body>
 </html>
