--- a/Advanced/sass/sass-practice/css/abstracts/_mixins.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_mixins.scss
@@ -7,3 +7,11 @@
   transition: all 0.2s;
   position: relative;
 }
+
+@mixin clearfix {
+  &::after {
+    content: "";
+    clear: both;
+    display: table;
+  }
+}
