--- a/Advanced/sass/sass-practice/css/abstracts/_variables.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_variables.scss
@@ -1,6 +1,12 @@
+//COLORS
 $light-green-color: #7ed56f;
 $medium-green-color: #55c57a;
 $dark-green-color: #28b485;
 $gray-dark-color: #777;
 $white-color: #fff;
 $black-color: #000;
+
+//GRID
+$grid-width: 114rem;
+$gutter-vertical: 8rem;
+$gutter-horizontal: 6rem;
