--- a/Advanced/sass/sass-practice/css/base/_base.scss
+++ b/Advanced/sass/sass-practice/css/base/_base.scss
@@ -3,7 +3,7 @@
 *::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 html {
   font-size: 62.5%;
@@ -15,4 +15,5 @@ body {
   line-height: 1.7;
   color: $gray-dark-color;
   padding: 30px;
+  box-sizing: border-box;
 }
