--- a/Advanced/sass/sass-practice/css/abstracts/_variables.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_variables.scss
@@ -7,6 +7,9 @@ $white-color: #fff;
 $black-color: #000;
 $gray-light-color-1: #f7f7f7;
 
+//FONTS
+$default-font-size: 1.6rem;
+
 //GRID
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
