--- a/Advanced/sass/sass-practice/css/base/_utilities.scss
+++ b/Advanced/sass/sass-practice/css/base/_utilities.scss
@@ -1,6 +1,15 @@
 .u-center-text {
   text-align: center;
 }
-.u-marging-bottom-8 {
+
+.u-margin-bottom-small {
+  margin-bottom: 1.5rem;
+}
+
+.u-margin-bottom-medium {
+  margin-bottom: 4rem;
+}
+
+.u-marging-bottom-big {
   margin-bottom: 8rem;
 }
