--- a/Advanced/sass/sass-practice/css/abstracts/_variables.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_variables.scss
@@ -7,6 +7,12 @@ $white-color: #fff;
 $black-color: #000;
 $gray-light-color-1: #f7f7f7;
 
+$secondary-light-color: #ffb900;
+$secondary-dark-color: #ff7730;
+
+$tertiary-light-color: #2998ff;
+$tertiary-dark-color: #5643fa;
+
 //FONTS
 $default-font-size: 1.6rem;
 
