--- a/Advanced/sass/sass-practice/css/pages/_home.scss
+++ b/Advanced/sass/sass-practice/css/pages/_home.scss
@@ -3,3 +3,25 @@
   padding: 25rem 0;
   margin-top: -20vh;
 }
+
+.section-feature {
+  padding: 20rem 0;
+  background-image: linear-gradient(
+      to right bottom,
+      rgba($light-green-color, 0.8),
+      rgba($dark-green-color, 0.8)
+    ),
+    url("../img/nat-4.jpg");
+  background-size: cover;
+  transform: skewY(-7deg);
+  margin-top: -10rem;
+  & > * {
+    transform: skewY(7deg);
+  }
+}
+
+.section-tours {
+  background-color: $gray-light-color-1;
+  padding: 25rem 0 50rem 0;
+  margin-top: -10rem;
+}
