--- a/Advanced/sass/sass-practice/css/abstracts/_variables.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_variables.scss
@@ -6,6 +6,7 @@ $gray-dark-color: #777;
 $white-color: #fff;
 $black-color: #000;
 $gray-light-color-1: #f7f7f7;
+$gray-light-color-2: #eee;
 
 $secondary-light-color: #ffb900;
 $secondary-dark-color: #ff7730;
