--- a/Advanced/sass/sass-practice/css/components/_cards.scss
+++ b/Advanced/sass/sass-practice/css/components/_cards.scss
@@ -2,10 +2,11 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem;
+  height: 54rem;
 
+  //FRONT-SIDE
   &__side {
-    height: 50rem;
+    height: 54rem;
     transition: all 0.8s ease;
     font-size: 2rem;
     position: absolute;
@@ -13,18 +14,45 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
+    border-radius: 3px;
     box-shadow: 0 1.5rem 4rem rgba($black-color, 0.15);
     overflow: hidden;
     &--front {
       background-color: $white-color;
     }
     &--back {
-      transform: rotateY(180deg);
-      background-image: linear-gradient(
-        to right bottom,
-        $secondary-light-color,
-        $secondary-dark-color
-      );
+      &-1 {
+        transform: rotateY(180deg);
+        background-image: linear-gradient(
+          to right bottom,
+          $secondary-light-color,
+          $secondary-dark-color
+        );
+      }
+      &-2 {
+        transform: rotateY(180deg);
+        background-image: linear-gradient(
+          to right bottom,
+          $secondary-light-color,
+          $secondary-dark-color
+        );
+      }
+      &-2 {
+        transform: rotateY(180deg);
+        background-image: linear-gradient(
+          to right bottom,
+          $light-green-color,
+          $dark-green-color
+        );
+      }
+      &-3 {
+        transform: rotateY(180deg);
+        background-image: linear-gradient(
+          to right bottom,
+          $tertiary-light-color,
+          $tertiary-dark-color
+        );
+      }
     }
   }
 
@@ -38,6 +66,10 @@
     background-size: cover;
     background-blend-mode: screen;
     height: 23rem;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    border-top-left-radius: 3px;
+    border-top-right-radius: 3px;
     &--1 {
       background-image: linear-gradient(
           to right bottom,
@@ -47,10 +79,97 @@
         url(../img/nat-5.jpg);
     }
     &--2 {
-      background-image: url(../img/nat-5.jpg);
+      background-image: linear-gradient(
+          to right bottom,
+          $light-green-color,
+          $dark-green-color
+        ),
+        url(../img/nat-6.jpg);
     }
     &--3 {
-      background-image: url(../img/nat-5.jpg);
+      background-image: linear-gradient(
+          to right bottom,
+          $tertiary-light-color,
+          $tertiary-dark-color
+        ),
+        url(../img/nat-7.jpg);
     }
+  }
+  &__heading {
+    font-size: 2.8rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $white-color;
+    position: absolute;
+    top: 12rem;
+    right: 2rem;
+    width: 75%;
+  }
+
+  &__heading--span {
+    padding: 1rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+    &--1 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($secondary-light-color, 0.85),
+        rgba($secondary-dark-color, 0.85)
+      );
+    }
+    &--2 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($light-green-color, 0.85),
+        rgba($dark-green-color, 0.85)
+      );
+    }
+    &--3 {
+      background-image: linear-gradient(
+        to right bottom,
+        rgba($tertiary-light-color, 0.85),
+        rgba($tertiary-dark-color, 0.85)
+      );
+    }
+  }
+  &__details {
+    padding: 1rem;
+    ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto;
+      li {
+        text-align: center;
+        font-family: 1.5rem;
+        padding: 1rem;
+        &:not(:last-child) {
+          border-bottom: 1px solid $gray-light-color-2;
+        }
+      }
+    }
+  }
+
+  //BACK-SIDE
+  &__cta {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 90%;
+    text-align: center;
+  }
+  &__price-box {
+    text-align: center;
+    color: $white-color;
+    margin-bottom: 8rem;
+  }
+  &__price-only {
+    font-size: 1.4rem;
+    text-transform: uppercase;
+  }
+  &__price-value {
+    font-size: 6rem;
+    font-weight: 100;
   }
 }
