--- a/Advanced/sass/sass-practice/css/main.scss
+++ b/Advanced/sass/sass-practice/css/main.scss
@@ -11,6 +11,8 @@
 @import "components/composition";
 @import "components/feature-box";
 @import "components/cards";
+@import "components/practice";
+@import "components/story";
 
 @import "layouts/headers";
 @import "layouts/grid";
