--- a/Advanced/sass/sass-practice/css/pages/_home.scss
+++ b/Advanced/sass/sass-practice/css/pages/_home.scss
@@ -22,6 +22,11 @@
 
 .section-tours {
   background-color: $gray-light-color-1;
-  padding: 25rem 0 50rem 0;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
+}
+.section-stories {
+  background-color: $gray-light-color-1;
+  padding: 15rem 0;
   margin-top: -10rem;
 }
