--- a/Advanced/sass/sass-practice/css/main.scss
+++ b/Advanced/sass/sass-practice/css/main.scss
@@ -13,6 +13,8 @@
 @import "components/cards";
 @import "components/practice";
 @import "components/story";
+@import "components/bg-video";
+@import "components/form";
 
 @import "layouts/headers";
 @import "layouts/grid";
