--- a/Advanced/sass/sass-practice/css/pages/_home.scss
+++ b/Advanced/sass/sass-practice/css/pages/_home.scss
@@ -26,7 +26,34 @@
   margin-top: -10rem;
 }
 .section-stories {
-  background-color: $gray-light-color-1;
+  // background-color: $gray-light-color-1;
   padding: 15rem 0;
   margin-top: -10rem;
+  position: relative;
+}
+
+.section-book {
+  padding: 15rem 0;
+  background-image: linear-gradient(
+    to right bottom,
+    $light-green-color,
+    $dark-green-color
+  );
+}
+.book {
+  background-image: linear-gradient(
+      105deg,
+      rgba($white-color, 0.9) 0%,
+      rgba($white-color, 0.9) 50%,
+      transparent 50%
+    ),
+    url(../img/nat-10.jpg);
+  background-size: cover;
+  height: 50rem;
+  border-radius: 3px;
+  box-shadow: 0 1.5rem 4rem rgba($black-color, 0.15);
+  &__form {
+    width: 50%;
+    padding: 6rem;
+  }
 }
