--- a/Advanced/sass/sass-practice/css/abstracts/_variables.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_variables.scss
@@ -2,9 +2,13 @@
 $light-green-color: #7ed56f;
 $medium-green-color: #55c57a;
 $dark-green-color: #28b485;
+
 $gray-dark-color: #777;
+$gray-dark-color-2: #999;
+
 $white-color: #fff;
 $black-color: #000;
+
 $gray-light-color-1: #f7f7f7;
 $gray-light-color-2: #eee;
 
