--- a/Advanced/sass/sass-practice/css/abstracts/_mixins.scss
+++ b/Advanced/sass/sass-practice/css/abstracts/_mixins.scss
@@ -6,6 +6,9 @@
   border-radius: 100px;
   transition: all 0.2s;
   position: relative;
+  //changes for<botton>
+  border: none;
+  cursor: pointer;
 }
 
 @mixin clearfix {
