--- a/Advanced/sass/sass-practice/css/base/_utilities.scss
+++ b/Advanced/sass/sass-practice/css/base/_utilities.scss
@@ -1,23 +1,23 @@
 .u-center-text {
-  text-align: center;
+  text-align: center !important;
 }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 
 .u-marging-bottom-big {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 
 .u-marging-top-big {
-  margin-top: 8rem;
+  margin-top: 8rem !important;
 }
 
 .u-marging-top-huge {
-  margin-top: 8rem;
+  margin-top: 8rem !important;
 }
