--- a/Advanced/sass/sass-practice/css/components/_form.scss
+++ b/Advanced/sass/sass-practice/css/components/_form.scss
@@ -4,21 +4,82 @@
   }
 
   &__label {
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin-left: 2rem;
+    margin-top: 0.7rem;
+    display: block;
+    transition: all 0.3s;
   }
-}
-.form__input {
-  font-family: inherit;
-  font-size: 1.5rem !important;
-  padding: 1.5rem 2rem !important;
-  border-radius: 2px !important;
-  background-color: rgba($white-color, 0.5) !important;
-  border: none;
-  border-bottom: 3px solid transparent !important;
-  width: 100%;
-  display: block;
-  &:focus {
-    outline: none;
-    box-shadow: 0 1rem 2rem rgba($black-color, 0.1) !important;
-    border-bottom: 3px solid $dark-green-color !important;
+
+  &__radio-input {
+    display: none;
+  }
+  &__input {
+    font-family: inherit;
+    color: inherit;
+    font-size: 1.5rem;
+    padding: 1.5rem 2rem;
+    border-radius: 2px;
+    background-color: rgba($white-color, 0.5);
+    border: none;
+    border-bottom: 3px solid transparent;
+    width: 100%;
+    display: block;
+    transition: all 0.3s;
+    &::-webkit-input-placeholder {
+      color: $gray-dark-color-2;
+    }
+    &:focus {
+      outline: none;
+      box-shadow: 0 1rem 2rem rgba($black-color, 0.1);
+      border-bottom: 3px solid $dark-green-color;
+      background-color: rgba($white-color, 1);
+    }
+    &:focus:invalid {
+      border-bottom: 3px solid $secondary-dark-color;
+    }
+  }
+  &__input:placeholder-shown + &__label {
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(-4rem);
+  }
+  &__radio-group {
+    width: 49%;
+    display: inline-block;
+  }
+  &__radio-label {
+    font-size: $default-font-size;
+    cursor: pointer;
+    position: relative;
+    padding-left: 4.5rem;
+  }
+  &__radio-button {
+    height: 3rem;
+    width: 3rem;
+    border: 5px solid $dark-green-color;
+    border-radius: 50%;
+    display: inline-block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    &::after {
+      content: "";
+      display: block;
+      height: 1.3rem;
+      width: 1.3rem;
+      border-radius: 50%;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: $dark-green-color;
+      opacity: 0;
+      transition: opacity 0.2s;
+    }
+  }
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
+    opacity: 1;
   }
 }
